@@ -6,9 +6,10 @@ readsb (4.0.1~dev) UNRELEASED; urgency=medium
   * Removed obsolete debug options.
   * Fix timeout and multiple event RRD update in readsbrrd.
   * Update bootstrap v4.5.0.
-  * via dump1090-fa
+  * Contribution via dump1090-fa
     * Factor out FIFO handling; reimplement as a linked list, not a circular buffer.
     * Use a bounce buffer for rtlsdr on ARM to work around zero-copy problems.
+    * Factor out SDR thread CPU monitoring.
 
  -- Michael Wolf <michael@mictronics.de>  Sat, 01 Aug 2020 09:38:01 +0200
 
